<resources>
    <!-- App -->
    <string name="app_name">MemoJy</string>
    <string name="credits_activity">Crédits</string>

    <!-- MainActivity -->
    <string name="choose_level">Choisir le niveau de difficulté</string>
    <string name="easy_button">Facile</string>
    <string name="medium_button">Moyen</string>
    <string name="hard_button">Difficile</string>

    <!-- Content description (SelectGameActivity) -->
    <string name="desc_card">cardImage</string>
    <string name="desc_card_game">cardGame</string>
    <string name="desc_card_back">cardBackGame</string>

    <!-- Content description (CreditsActivity) -->
    <string name="desc_image_perso">imagePerso</string>

    <!-- Alert Dialog Game (GameActivity) -->
    <string name="replay_button">Rejouer</string>
    <string name="quit_button">Quitter</string>
    <string name="title_dialog">Vous avez fini en %1$d coups !</string>
    <string name="mess_dialog">Voulez-vous rejouer ?</string>

    <!-- Alert Dialog onBackPressed (GameActivity) -->
    <string name="title_dialog_back_pressed">Quitter la partie</string>
    <string name="mess_dialog_back_pressed">Êtes-vous sûr de vouloir quitter la partie ?</string>
    <string name="yes_button">Oui</string>
    <string name="no_button">Non</string>

    <!-- Dialog Parameter (MainActivity) -->
    <string name="title_dialog_parameter">Paramètres</string>
    <string name="mess_toggle_button">\u0009Suppression des cartes trouvées</string>
    <string name="button_ok">Enregistrer</string>
    <string name="button_cancel">Annuler</string>

    <!-- Menu (MainActivity) -->
    <string name="action_credits">Crédits</string>
    <string name="action_settings">Paramètres</string>

    <!-- CreditsActivity -->
    <string name="title_credits">\u0020Crédits photos, images et animations</string>
    <string name="images_credits">
        \u0020Les icônes de la catégorie personnages : Conçu par Freepik à partir de Flaticon.\n
        Les icônes de la catégorie animaux : Conçu par Freepik à partir de Flaticon.\n
        Les icônes de la catégorie drapeaux : Conçu par Freepik à partir de Flaticon.\n
        Les icônes de la catégorie émoticones : Conçu par Roundicons à partir de Flaticon.\n
        Les autres images utilisées sont libres de droit : Licence CC0.
    </string>
    <string name="konfetti_credits">\u0020Animation confettis : Copyright 2017 Dion Segijn ( https://github.com/DanielMartinus/Konfetti )</string>

</resources>
