<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.memory.adrhm.memory.CreditsActivity">


    <TextView
        android:id="@+id/titleCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_credits"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/titleCredits"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/imagesCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/images_credits"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/imagePerso"
        android:layout_toEndOf="@+id/imagePerso"
        android:layout_marginBottom="12dp" />

    <ImageView
        android:contentDescription="@string/desc_image_perso"
        android:id="@+id/imagePerso"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/separator"
        android:layout_alignParentStart="true"
        android:background="@drawable/avatar"/>

</RelativeLayout>
