<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/constraintLayoutMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.memory.adrhm.memory.MainActivity">

    <TextView
        android:id="@+id/chooseLeveltextView"
        android:layout_width="455dp"
        android:layout_height="117dp"
        android:layout_marginStart="177dp"
        android:layout_marginTop="255dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:fontFamily="sans-serif"
        android:text="@string/choose_level"
        android:textSize="40sp"
        android:textAllCaps="true"
        android:typeface="normal"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="240dp"
        android:layout_height="86dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="169dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/chooseLeveltextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:text="@string/easy_button"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="240dp"
        android:layout_height="86dp"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="89dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyButton"
        app:layout_constraintBottom_toTopOf="@+id/hardButton"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/chooseLeveltextView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:text="@string/medium_button"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="240dp"
        android:layout_height="86dp"
        android:layout_marginBottom="169dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/chooseLeveltextView"
        app:layout_constraintHorizontal_bias="1.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:text="@string/hard_button"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/colorAccent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />
</android.support.constraint.ConstraintLayout>
